<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.mj.presentation.detail.DetailActivity">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />


            <ImageView
                android:id="@+id/imageview_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/back_button"
                android:paddingEnd="15dp"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/textview_pokemon_name_korean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageview_back"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/imageview_back"
                app:layout_constraintTop_toTopOf="@+id/imageview_back"
                tools:text="포켓몬 이름" />

            <TextView
                android:id="@+id/textview_pokemon_name_english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/textview_pokemon_name_korean"
                app:layout_constraintTop_toBottomOf="@id/textview_pokemon_name_korean"
                tools:text="pokemon name" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progress_detail"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:indeterminate="true"
                android:visibility="gone"
                app:indicatorSize="20dp"
                app:layout_constraintBottom_toBottomOf="@id/textview_pokemon_name_korean"
                app:layout_constraintStart_toEndOf="@id/textview_pokemon_name_korean"
                app:layout_constraintTop_toTopOf="@id/textview_pokemon_name_korean"
                app:trackCornerRadius="10dp" />

            <ImageView
                android:id="@+id/imageview_pokemon"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/pokemon_image"
                android:scaleType="centerCrop"
                android:src="@drawable/image_pokeball"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/textview_pokemon_name_english"
                app:layout_constraintWidth_percent="0.6" />

            <TextView
                android:id="@+id/textview_pokemon_height_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/height"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/imageview_pokemon" />


            <TextView
                android:id="@+id/textview_pokemon_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/textview_pokemon_height_title"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@id/textview_pokemon_height_title"
                tools:text="10" />


            <com.mj.presentation.detail.customview.PokemonLocationButton
                android:id="@+id/button_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/textview_pokemon_height_title"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintTop_toTopOf="@+id/textview_pokemon_height_title" />

            <TextView
                android:id="@+id/textview_pokemon_weight_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp"
                android:text="@string/weight"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/textview_pokemon_height_title"
                app:layout_constraintVertical_bias="0" />

            <TextView
                android:id="@+id/textview_pokemon_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/textview_pokemon_weight_title"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@id/textview_pokemon_weight_title"
                tools:text="10" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>